First draft with about + contact

--- a/header.html
+++ b/header.html
@@ -1,4 +1,4 @@
-<div class="header">
+<div style="height: 150px;" class="header">
     <div class="container">
        <div class="row d_flex">
           <div class=" col-md-2 col-sm-3 col logo_section">
@@ -23,13 +23,6 @@
                       <li class="nav-item">
                          <a class="nav-link" href="about.html">About</a>
                       </li>
-                      <li class="nav-item">
-                         <a class="nav-link" href="hosting.html">Hosting</a>
-                      </li>
-                      <li class="nav-item">
-                         <a class="nav-link" href="domain.html">Domain</a>
-                      </li>
-                     
                       <li class="nav-item">
                          <a class="nav-link" href="contact.html">Contact Us</a>
                       </li>
