--- a/about.html
+++ b/about.html
@@ -1,134 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <!-- basic -->
-      <meta charset="utf-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <!-- mobile metas -->
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <meta name="viewport" content="initial-scale=1, maximum-scale=1">
-      <!-- site metas -->
-      <title>Penn State - Bioinformatics Core</title>
-      <meta name="keywords" content="">
-      <meta name="description" content="">
-      <meta name="author" content="">
-      <!-- bootstrap css -->
-      <link rel="stylesheet" href="css/bootstrap.min.css">
-      <!-- style css -->
-      <link rel="stylesheet" href="css/style.css">
-      <!-- Responsive-->
-      <link rel="stylesheet" href="css/responsive.css">
-      <!-- fevicon -->
-      <link rel="icon" href="images/fevicon.png" type="image/gif" />
-      <!-- Tweaks for older IEs-->
-      <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
-      <!--[if lt IE 9]>
+
+<head>
+   <!-- basic -->
+   <meta charset="utf-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <!-- mobile metas -->
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <meta name="viewport" content="initial-scale=1, maximum-scale=1">
+   <!-- site metas -->
+   <title>Penn State - Bioinformatics Core</title>
+   <meta name="keywords" content="">
+   <meta name="description" content="">
+   <meta name="author" content="">
+   <!-- bootstrap css -->
+   <link rel="stylesheet" href="css/bootstrap.min.css">
+   <!-- style css -->
+   <link rel="stylesheet" href="css/style.css">
+   <!-- Responsive-->
+   <link rel="stylesheet" href="css/responsive.css">
+   <!-- fevicon -->
+   <link rel="icon" href="https://www.psu.edu/favicon.ico" type="image/gif" />
+   <!-- Tweaks for older IEs-->
+   <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+   <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
-   </head>
-   <!-- body -->
-   <body class="main-layout inner_page">
-      <!-- loader  -->
-      <div class="loader_bg">
-         <div class="loader"><img src="images/loading.gif" alt="#"/></div>
-      </div>
-      <!-- end loader -->
-      <!-- header -->
-      <div id="header-container"></div>
-      <!-- end header inner -->
-      <!-- about -->
-      <div class="about">
-         <div class="container">
-            <div class="row">
-               <div class="col-md-12">
-                  <div class="titlepage text_align_center">
-                     <h2>About <span class="blue_light">Comapny</span></h2>
-                  </div>
+</head>
+<!-- body -->
+
+<style>
+   /* body {
+      box-sizing: border-box;
+   } */
+
+   .team-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            justify-content: space-between; /* Spreads items evenly */
+            padding: 20px;
+            gap: 15px;
+
+   }
+
+   .item {
+      text-align: center;
+   }
+
+   .item img {
+      width: 100%;
+      height: auto;
+      aspect-ratio: 1 / 1;
+      object-fit: cover;
+      border-radius: 8px;
+   }
+
+   .caption {
+      margin-top: 10px;
+      font-size: 16px;
+      color: #333;
+   }
+</style>
+
+<body class="main-layout inner_page">
+   <!-- loader  -->
+   <div class="loader_bg">
+      <div class="loader"><img src="images/loading.gif" alt="#" /></div>
+   </div>
+   <!-- end loader -->
+   <!-- header -->
+   <div id="header-container"></div>
+   <!-- end header inner -->
+   <!-- about -->
+   <div class="about">
+      <div class="container">
+         <div class="row">
+            <div class="col-md-12">
+               <div class="titlepage text_align_center">
+                  <h2>MEET THE <span class="blue_light">Team</span></h2>
                </div>
-               <div class="col-md-10 offset-md-1">
-                  <div class="about_img text_align_center">
-                     <figure><img src="images/about.png" alt="#"/></figure>
-                     <p>
-                        when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now 
-                     </p>
-                     <a class="read_more" href="Javascript:void(0)">Read More</a>
-                  </div>
+            </div>
+            <div class="team-container">
+               <div class="item">
+                  <img src="/images/team/ilias.jpg" alt="Image 1">
+                  <div class="caption"><span style="font-weight: bold">Ilias</span> is a Principal Investigator with years of experience on advanced bioinformatics research and managing strong academic teams. </div>
+               </div>
+               <div class="item">
+                  <img src="/images/team/giannis.jpg" alt="Image 2">
+                  <div class="caption"><span style="font-weight: bold">Ioannis</span> is a Machine Learning Engineer with a passion for algorithms. His main research interest is developing optimized pipelines for feature extraction and machine learning on large scale genomic data. </div>
+               </div>
+               <div class="item">
+                  <img src="/images/team/kimonas.jpg" alt="Image 3">
+                  <div class="caption"><span style="font-weight: bold">Kimonas</span> is an Electrical and Computer Engineer with a strong inclination towards software engineering , system design and cybersecurity. He has worked at IBM security expert labs and his reasearch interests cover software architecture, algorithms and cybersecurity. </div>
+               </div>
+               <div class="item">
+                  <img src="/images/team/michalis.png" alt="Image 4">
+                  <div class="caption"><span style="font-weight: bold">Michalis</span> is an Electrical and Computer Engineer with a robust background in theoretical computer science and software engineering, having previously contributed his expertise at IBM’s Data & AI department.</div>
                </div>
             </div>
          </div>
       </div>
-      <!-- end about -->
-      <!--  footer -->
-      <footer>
-         <div class="footer">
-            <div class="container">
-               <div class="row">
-                  <div class="col-lg-3 col-md-6 col-sm-6">
-                     <div class="infoma text_align_left">
-                        <h3>Choose.</h3>
-                        <ul class="commodo">
-                           <li>Commodo</li>
-                           <li>consequat. Duis a</li>
-                           <li>ute irure dolor</li>
-                           <li>in reprehenderit </li>
-                           <li>in voluptate </li>
-                        </ul>
-                     </div>
-                  </div>
-                  <div class="col-lg-4 col-md-6 col-sm-6">
-                     <div class="infoma">
-                        <h3>Get Support.</h3>
-                        <ul class="conta">
-                           <li><i class="fa fa-map-marker" aria-hidden="true"></i>Address : Loram Ipusm 
-                           </li>
-                           <li><i class="fa fa-phone" aria-hidden="true"></i>Call : +01 1234567890</li>
-                           <li> <i class="fa fa-envelope" aria-hidden="true"></i><a href="Javascript:void(0)"> Email : demo@gmail.com</a></li>
-                        </ul>
-                     </div>
-                  </div>
-                  <div class="col-lg-3 col-md-6 col-sm-6">
-                     <div class="infoma">
-                        <h3>Company.</h3>
-                        <ul class="menu_footer">
-                           <li><a href="index.html">Home</a></li>
-                           <li><a href="about.html">About </a></li>
-                           <li><a href="domain.html">Domain</a></li>
-                           <li><a href="hosting.html">Hosting</a></li>
-                           <li><a href="contact.html">Contact</a></li>
-                        </ul>
-                     </div>
-                  </div>
-                  <div class="col-lg-2 col-md-6 col-sm-6">
-                     <div class="infoma text_align_left">
-                        <h3>Services.</h3>
-                        <ul class="commodo">
-                           <li>Commodo</li>
-                           <li>consequat. Duis a</li>
-                           <li>ute irure dolor</li>
-                           <li>in reprehenderit </li>
-                           <li>in voluptate </li>
-                        </ul>
-                     </div>
-                  </div>
-               </div>
-            </div>
-            <div class="copyright">
-               <div class="container">
-                  <div class="row">
-                     <div class="col-md-12">
-                        <p>© 2020 All Rights Reserved. <a href="https://html.design/"> Free html Templates</a></p>
-                     </div>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </footer>
-      <!-- end footer -->
-      <!-- Javascript files-->
-      <script src="js/jquery.min.js"></script>
-      <script src="js/bootstrap.bundle.min.js"></script>
-      <!-- sidebar -->
-      <script src="js/custom.js"></script>
-      <script src="js/components.js"></script>
-   </body>
+   </div>
+   <!-- end about -->
+   <!--  footer -->
+   <div id='footer-container'></div>
+
+   <!-- end footer -->
+   <!-- Javascript files-->
+   <script src="js/jquery.min.js"></script>
+   <script src="js/bootstrap.bundle.min.js"></script>
+   <!-- sidebar -->
+   <script src="js/custom.js"></script>
+   <script src="js/components.js"></script>
+</body>
+
 </html>
