--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
       <!-- Responsive-->
       <link rel="stylesheet" href="css/responsive.css">
       <!-- fevicon -->
-      <link rel="icon" href="images/fevicon.png" type="image/gif" />
+      <link rel="icon" href="https://www.psu.edu/favicon.ico" type="image/gif" />
       <!-- Tweaks for older IEs-->
       <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
       <!--[if lt IE 9]>
@@ -37,104 +37,11 @@
       <div id="header-container"></div>
       <!-- end header inner -->
       <!-- contact -->
-      <div class="contact">
-         <div class="container">
-            <div class="row ">
-               <div class="col-md-12">
-                  <div class="titlepage text_align_center">
-                     <h2>Contact <span class="blue_light">Us</span></h2>
-                  </div>
-               </div>
-               <div class="col-md-10 offset-md-1">
-                  <form id="request" class="main_form">
-                     <div class="row">
-                        <div class="col-md-12 ">
-                           <input class="contactus" placeholder="Name" type="type" name=" Name"> 
-                        </div>
-                        <div class="col-md-12">
-                           <input class="contactus" placeholder="Phone number" type="type" name="Phone Number">                          
-                        </div>
-                        <div class="col-md-12">
-                           <input class="contactus" placeholder="Your Email" type="type" name="Email">                          
-                        </div>
-                        <div class="col-md-12">
-                           <textarea class="textarea" placeholder="Message" type="type" Message="Name"></textarea>
-                        </div>
-                        <div class="col-md-12">
-                           <button class="send_btn">Submit Now</button>
-                        </div>
-                     </div>
-                  </form>
-               </div>
-            </div>
-         </div>
-      </div>
+      <div id='contact-form-container'></div>
       <!-- contact -->
       <!--  footer -->
-      <footer>
-         <div class="footer">
-            <div class="container">
-               <div class="row">
-                  <div class="col-lg-3 col-md-6 col-sm-6">
-                     <div class="infoma text_align_left">
-                        <h3>Choose.</h3>
-                        <ul class="commodo">
-                           <li>Commodo</li>
-                           <li>consequat. Duis a</li>
-                           <li>ute irure dolor</li>
-                           <li>in reprehenderit </li>
-                           <li>in voluptate </li>
-                        </ul>
-                     </div>
-                  </div>
-                  <div class="col-lg-4 col-md-6 col-sm-6">
-                     <div class="infoma">
-                        <h3>Get Support.</h3>
-                        <ul class="conta">
-                           <li><i class="fa fa-map-marker" aria-hidden="true"></i>Address : Loram Ipusm 
-                           </li>
-                           <li><i class="fa fa-phone" aria-hidden="true"></i>Call : +01 1234567890</li>
-                           <li> <i class="fa fa-envelope" aria-hidden="true"></i><a href="Javascript:void(0)"> Email : demo@gmail.com</a></li>
-                        </ul>
-                     </div>
-                  </div>
-                  <div class="col-lg-3 col-md-6 col-sm-6">
-                     <div class="infoma">
-                        <h3>Company.</h3>
-                        <ul class="menu_footer">
-                           <li><a href="index.html">Home</a></li>
-                           <li><a href="about.html">About </a></li>
-                           <li><a href="domain.html">Domain</a></li>
-                           <li><a href="hosting.html">Hosting</a></li>
-                           <li><a href="contact.html">Contact</a></li>
-                        </ul>
-                     </div>
-                  </div>
-                  <div class="col-lg-2 col-md-6 col-sm-6">
-                     <div class="infoma text_align_left">
-                        <h3>Services.</h3>
-                        <ul class="commodo">
-                           <li>Commodo</li>
-                           <li>consequat. Duis a</li>
-                           <li>ute irure dolor</li>
-                           <li>in reprehenderit </li>
-                           <li>in voluptate </li>
-                        </ul>
-                     </div>
-                  </div>
-               </div>
-            </div>
-            <div class="copyright">
-               <div class="container">
-                  <div class="row">
-                     <div class="col-md-12">
-                        <p>© 2020 All Rights Reserved. <a href="https://html.design/"> Free html Templates</a></p>
-                     </div>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </footer>
+      <div id='footer-container'></div>
+
       <!-- end footer -->
       <!-- Javascript files-->
       <script src="js/jquery.min.js"></script>
