--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
    .item img {
       width: 100%;
       height: auto;
-      aspect-ratio: 1 / 1;
+      aspect-ratio: 1 / 1.3;
       object-fit: cover;
       border-radius: 8px;
    }
@@ -78,6 +78,16 @@
             <div class="col-md-12">
                <div class="titlepage text_align_center">
                   <h2>MEET THE <span class="blue_light">Team</span></h2>
+               </div>
+            </div>
+            <div class="team-container" style="width: 100%;">
+               <div class="col item">
+                  <img src="/images/team/james.jfif" alt="Image 01" >
+                  <div class="caption"><span style="font-weight: bold">James Broach, PhD</span> Distinguished Professor and Chair, Department of Biochemistry and Molecular Biology </div>
+               </div>
+               <div class="col item" >
+                  <img src="/images/team/lisa.jfif" alt="Image 02">
+                  <div class="caption"><span style="font-weight: bold">Lisa Schneper, PhD</span> Assistant Professor, Department of Biochemistry and Molecular Biology</div>
                </div>
             </div>
             <div class="team-container">
