--- a/about.html
+++ b/about.html
@@ -43,16 +43,26 @@
 
    }
 
+   .team-container-penn {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr); /* 2 columns for Lisa and James */
+      justify-content: space-between; 
+      padding: 20px;
+      gap: 15px;
+   }
+
    .item {
       text-align: center;
+
    }
 
    .item img {
-      width: 100%;
       height: auto;
       aspect-ratio: 1 / 1.3;
       object-fit: cover;
       border-radius: 8px;
+      max-width: 200px;
+
    }
 
    .caption {
@@ -60,6 +70,15 @@
       font-size: 16px;
       color: #333;
    }
+
+   
+   .team-container-penn .caption {
+      max-width: 200px;
+      margin-left: auto;
+      margin-right: auto;
+   }
+
+
 </style>
 
 <body class="main-layout inner_page">
@@ -74,41 +93,48 @@
    <!-- about -->
    <div class="about">
       <div class="container">
-         <div class="row">
             <div class="col-md-12">
                <div class="titlepage text_align_center">
                   <h2>MEET THE <span class="blue_light">Team</span></h2>
                </div>
             </div>
-            <div class="team-container" style="width: 100%;">
-               <div class="col item">
+            <div class="team-container-penn" >
+               <div class="item">
                   <img src="/images/team/james.jfif" alt="Image 01" >
                   <div class="caption"><span style="font-weight: bold">James Broach, PhD</span> Distinguished Professor and Chair, Department of Biochemistry and Molecular Biology </div>
                </div>
-               <div class="col item" >
+               <div class="item" >
                   <img src="/images/team/lisa.jfif" alt="Image 02">
                   <div class="caption"><span style="font-weight: bold">Lisa Schneper, PhD</span> Assistant Professor, Department of Biochemistry and Molecular Biology</div>
                </div>
             </div>
+            <br>
+            <br>
+
+            <div class="col-md-12">
+               <div class="titlepage text_align_center">
+                  <h2>External  <span class="blue_light">Consultants</span></h2>
+               </div>
+            </div>
+               
             <div class="team-container">
                <div class="item">
                   <img src="/images/team/ilias.jpg" alt="Image 1">
-                  <div class="caption"><span style="font-weight: bold">Ilias</span> is a Principal Investigator with years of experience on advanced bioinformatics research and managing strong academic teams. </div>
+                  <div class="caption"><span style="font-weight: bold">Ilias Georgakopoulos-Soares, PhD <br> </span>Ilias is a Principal Investigator with years of experience on advanced bioinformatics research and managing strong academic teams. </div>
                </div>
                <div class="item">
                   <img src="/images/team/giannis.jpg" alt="Image 2">
-                  <div class="caption"><span style="font-weight: bold">Ioannis</span> is a Machine Learning Engineer with a passion for algorithms. His main research interest is developing optimized pipelines for feature extraction and machine learning on large scale genomic data. </div>
+                  <div class="caption"><span style="font-weight: bold">Ioannis Mouratidis, MSc <br></span>Ioannis is a Machine Learning Engineer with a passion for algorithms. His main research interest is developing optimized pipelines for feature extraction and machine learning on large scale genomic data. </div>
                </div>
                <div class="item">
                   <img src="/images/team/kimonas.jpg" alt="Image 3">
-                  <div class="caption"><span style="font-weight: bold">Kimonas</span> is an Electrical and Computer Engineer with a strong inclination towards software engineering , system design and cybersecurity. He has worked at IBM security expert labs and his reasearch interests cover software architecture, algorithms and cybersecurity. </div>
+                  <div class="caption"><span style="font-weight: bold">Kimonas Provatas, MSc <br> </span>Kimon is an Electrical and Computer Engineer with a strong inclination towards software engineering , system design and cybersecurity. He has worked at IBM security expert labs and his reasearch interests cover software architecture, algorithms and cybersecurity. </div>
                </div>
                <div class="item">
                   <img src="/images/team/michalis.png" alt="Image 4">
-                  <div class="caption"><span style="font-weight: bold">Michalis</span> is an Electrical and Computer Engineer with a robust background in theoretical computer science and software engineering, having previously contributed his expertise at IBM’s Data & AI department.</div>
+                  <div class="caption"><span style="font-weight: bold">Michalis Patsakis, MSc <br></span>Michalis is an Electrical and Computer Engineer with a robust background in theoretical computer science and software engineering, having previously contributed his expertise at IBM’s Data & AI department.</div>
                </div>
             </div>
-         </div>
       </div>
    </div>
    <!-- end about -->
