--- a/header.html
+++ b/header.html
@@ -1,3 +1,22 @@
+<style>
+   .logo img {
+    width: 100%;             /* Allow the image to scale with its container */
+    max-width: 180px;         /* Set a maximum width to prevent it from becoming too large */
+    height: auto;             /* Maintain the aspect ratio */
+}
+
+@media (max-width: 768px) {
+    .logo img {
+        max-width: 120px;     /* Adjust the logo size for smaller screens */
+    }
+}
+
+@media (max-width: 480px) {
+    .logo img {
+        max-width: 100px;     /* Further reduce the logo size for very small screens */
+    }
+}
+</style>
 <div style="height: 150px;" class="header">
     <div class="container">
        <div class="row d_flex">
